fix nowrap

--- a/src/less/general.less
+++ b/src/less/general.less
@@ -160,7 +160,7 @@ li {
 	border-radius: 0.25em;
 	font-weight: normal;
 	text-overflow: ellipsis;
-	white-space: nowrap;
+	// white-space: nowrap;
 	overflow: hidden;
 	box-sizing: border-box;
 
